--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "i18next-node-fs-backend": "1.2.1",
     "i18next-xhr-backend": "1.5.1",
     "razzle": "2.4.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "react-i18next": "8.0.6",
     "react-redux": "^7.0.3",
-    "react-router-dom": "4.3.1",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "5.0.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
